# shift-left-threat-modelling

./: .gitignore  CITATION.cff  LICENSE  LLM_CONFIG.md  PROJECT_SUMMARY.md  README.md  SETUP.md  STANDALONE_VISUALIZATION.md  _config.yml  app.py  architecture_spec.tsp  gemini_threat_model.py  index.md  package-lock.json  pyproject.toml  requirements.txt
_sass/custom/: custom.scss  setup.scss
docs/: COMPLIANCE.md
notebooks/: README.md  gemini_filesearch_pytm_threat_model.ipynb
src/threatmodeling/: __init__.py  __main__.py  llm_analyzer.py  llm_main.py  mathematical_verifier.py  pipeline.py  pipeline_main.py  pytm_visualize.py  rag_model.py  reporting.py  semantic_compiler.py  semantic_main.py  threat_knowledge_graph.py  validate.py  visualize.py
